major refac in whole codebase (#206)
* major refac in whole codebase

* settings

* cleaning up

* format

* cleaning up

* cleaning up

* cleaning up

* cleaning up

* cleaning up

* cleaning up