@@ -12,7 +12,6 @@ import java.util.List;
 
 public class FADecision {
   public static void process(HTTPReqResData reqRes) {
-
     SessionData sessionData = reqRes.getSessionData();
     if (sessionData.getUnit().getProvisioningMode() == ProvisioningMode.REGULAR) {
       List<HTTPReqResData> reqResList = sessionData.getReqResList();
@@ -20,9 +19,9 @@ public class FADecision {
         HTTPReqResData prevReqRes = reqResList.get(reqResList.size() - 2);
         HTTPReqResData prev2ReqRes = reqResList.get(reqResList.size() - 3);
         String prevMethod = prevReqRes.getResponse().getMethod();
-        if (prevMethod.equals(TR069Method.GET_PARAMETER_VALUES)) {
+        if (TR069Method.GET_PARAMETER_VALUES.equals(prevMethod)) {
           String prev2Method = prev2ReqRes.getResponse().getMethod();
-          if (!prev2Method.equals(TR069Method.GET_PARAMETER_VALUES)) {
+          if (!TR069Method.GET_PARAMETER_VALUES.equals(prev2Method)) {
             Log.warn(
                 FADecision.class,
                 "GPVres contained error, try once more and ask for all parameters");
@@ -35,7 +34,7 @@ public class FADecision {
 
     ProvisioningMessage pm = sessionData.getProvisioningMessage();
     Fault fault = reqRes.getRequest().getFault();
-    pm.setErrorCode(new Integer(fault.getFaultCode()));
+    pm.setErrorCode(Integer.valueOf(fault.getFaultCode()));
     pm.setErrorMessage(fault.getFaultString());
     pm.setErrorResponsibility(ErrorResponsibility.CLIENT);
     pm.setProvStatus(ProvStatus.ERROR);
